autotests/syntax-tests-simple-refal/tests/negative/negative138.sref
Name { Name Name , Name Name : Name ( Name ) [ Name ] = ; ,
{ } { ( ( ) e.Var $SWAP Name Name ) Name , : = : = ; = ; } Name
: { } : , : = : = ; = ; } ; 